--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="label_password">Password</string>
     <string name="label_login">Login</string>
     <string name="label_sign_up">Sign Up</string>
+    <string name="label_reset">Reset</string>
     <string name="label_forgot_pass">Forgot Password?</string>
 
     <string name="refresh_captcha">Refresh Captcha</string>
