--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,15 @@
     <string name="sample_amount">0.00004567</string>
     <string name="transaction_history">Transaction History</string>
     <string name="btc_address">5D1tAaz5x1HUXrCNLbtMDqcw6o5GNn4xxX</string>
+    <string name="label_btc_address">Bitcoin Address</string>
 
+    <string name="label_to">To</string>
+    <string name="label_amount">Amount</string>
+    <string name="label_enter_amount">Enter Amount</string>
+
+    <string name="label_withdraw">Withdraw</string>
+    <string name="label_fee">Transaction Fees: 0.00000000 BTC</string>
+    <string name="label_amount_deducted">Amount Deducted: 0.00000000 BTC</string>
 
     <string name="note1">You can send bitcoins to your deposit address and
         they will be credited to your account after 1 network confirmation.
