--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,10 +35,19 @@
     <string name="transaction_history">Transaction History</string>
     <string name="btc_address">5D1tAaz5x1HUXrCNLbtMDqcw6o5GNn4xxX</string>
     <string name="label_btc_address">Bitcoin Address</string>
+    <string name="label_change_password">Change Password</string>
 
     <string name="label_to">To</string>
     <string name="label_amount">Amount</string>
     <string name="label_enter_amount">Enter Amount</string>
+
+    <string name="label_old_password">Old Password</string>
+    <string name="label_new_password">New Password</string>
+    <string name="label_repeat_password">Confirm New Password</string>
+
+    <string name="label_password_e">Enter password</string>
+
+    <string name="label_change">Change</string>
 
     <string name="label_withdraw">Withdraw</string>
     <string name="label_fee">Transaction Fees: 0.00000000 BTC</string>
