--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,13 +26,14 @@
     <string name="header_balance">Balance</string>
     <string name="account">Account Overview</string>
     <string name="current_balance">Current balance</string>
-    <string name="rp_time">Reward Time:</string>
-    <string name="bonus_time">Bonus Time:</string>
+    <string name="rp_time">Reward Time</string>
+    <string name="bonus_time">Bonus Time</string>
     <string name="next_bitcoin">Next Bitcoin:</string>
     <string name="transaction_name">Transaction name</string>
     <string name="sample_date">20 sept 17 10:11:11</string>
     <string name="sample_amount">0.00004567</string>
     <string name="transaction_history">Transaction History</string>
+    <string name="last_transaction_history">Last Transaction History</string>
     <string name="btc_address">5D1tAaz5x1HUXrCNLbtMDqcw6o5GNn4xxX</string>
     <string name="label_btc_address">Bitcoin Address</string>
     <string name="label_change_password">Change Password</string>
